Closed Bug 1506264 Opened 7 years ago Closed 7 years ago

Some nsIObserver implementations do not advertise the interface properly via QueryInterface

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla65
Tracking Status
firefox65 --- fixed

People

(Reporter: gsvelto, Assigned: gsvelto)

References

Details

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1502284 +++ While working on bug 1502284 I noticed that querying the nsIObserver interface on object that had already been stored in the observer service sometimes failed. As it turns out some classes that implement the nsIObserver interface fail to properly advertise it via QueryInterface, e.g.: class Foo : public nsIFoo , public nsIObserver { ... } NS_IMPL_ISUPPORTS(Foo, nsIFoo)
Assignee: nobody → gsvelto
Status: NEW → ASSIGNED
Pushed by gsvelto@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0f23dad0834c Fix querying the nsIObserver interface in all classes implementing it r=erahm
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: