Bug 1506264 - Fix querying the nsIObserver interface in all classes implementing it r=erahm

Differential Revision: https://phabricator.services.mozilla.com/D11530